--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -309,9 +309,11 @@
   }
   
   .open-menu-btn {
-    
-    
+    @media screen and (min-width: 768px) {
       display: none;
+    }
+    
+  
     
     margin-left: auto;
     background-color: transparent;
@@ -368,6 +370,7 @@
     fill: currentColor;
   }
   .modal-menu-close {
+    
     
   
     display: flex;
