--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -13,9 +13,9 @@
   }
   
   .modal {
-   
-  min-width: 450px;
-  height: 609px;
+   max-width: 1600px;
+   width: 100%;
+   height: 609px;
   
      
       position: absolute;
