--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -291,6 +291,7 @@
   .mob-menu {
     position: fixed;
     top: 0;
+    left: 0;
     background-color: #ffffff;
     width: 100vw;
     height: 100vh;
@@ -370,7 +371,7 @@
     fill: currentColor;
   }
   .modal-menu-close {
-    
+
     
   
     display: flex;
