--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -240,12 +240,11 @@
     }
     &__input {
       @media screen and (max-width: 768px) {
-        width: 450px;
-
-        margin-bottom: 20px;
+     
       }
       @media screen and (min-width: 768px) {
-        width: 450px;
+       
+        min-width: 450px;
         margin-bottom: 20px;
       }
       @media screen and (min-width: 1200px) {
