--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,5 +1,9 @@
 .team {
- 
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
 
   
     background: var(--section-color--);
@@ -52,22 +56,26 @@
         }
        
     &__item {
-      display: flex;
-      flex-wrap: wrap;
+      width: 100%;
+      margin-bottom: 30px;
      
       gap: 30px;
 
       @media screen and (max-width: 768px) {
  
         flex-basis: calc((100% - 0px)/1);
+  
         display: flex;
         flex-direction: column;
         justify-content: center;
+    
         
       }
       @media screen and (min-width: 768px) {
        
         flex-basis: calc((100% - 30px)/2);
+        margin-bottom: 0;
+        min-width: 354px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -88,6 +96,7 @@
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
           0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
+        
       
     }
     &__title {
