--- a/css/main.css
+++ b/css/main.css
@@ -1385,7 +1385,7 @@ address {
 }
 @media screen and (min-width: 768px) {
   .footer__input {
-    min-width: 450px;
+    width: 450px;
     margin-bottom: 20px;
   }
 }
@@ -1427,6 +1427,10 @@ address {
   .footer__btn {
     margin: 0 auto;
   }
+}
+.footer__form {
+  width: 100%;
+  max-width: 358px;
 }
 @media screen and (max-width: 768px) {
   .footer__form {
