--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -244,7 +244,7 @@
       }
       @media screen and (min-width: 768px) {
        
-        min-width: 450px;
+        width: 450px;
         margin-bottom: 20px;
       }
       @media screen and (min-width: 1200px) {
@@ -298,6 +298,8 @@
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
       }
       &__form {
+        width: 100%;
+        max-width: 358px;
         @media screen and (max-width: 768px) {
         display: flex;
         flex-direction: column;
@@ -306,6 +308,7 @@
         }
 
       @media screen and (min-width: 768px) {
+
         display: flex;
        flex-direction: column;
         align-items: center;
