--- a/css/main.css
+++ b/css/main.css
@@ -1383,6 +1383,11 @@ address {
   padding-left: 16px;
   outline: none;
 }
+@media screen and (max-width: 768px) {
+  .footer__input {
+    margin-bottom: 20px;
+  }
+}
 @media screen and (min-width: 768px) {
   .footer__input {
     width: 450px;
@@ -1540,9 +1545,12 @@ address {
 }
 
 .modal {
+  max-height: 90vh;
+  width: calc(100% - 30px);
   max-width: 1600px;
   width: 100%;
   height: 609px;
+  overflow: scroll;
   position: absolute;
   top: 50%;
   left: 50%;
