--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -13,9 +13,12 @@
   }
   
   .modal {
+    max-height: 90vh;
+    width: calc(100% - 30px);
    max-width: 1600px;
    width: 100%;
    height: 609px;
+  overflow: scroll;
   
      
       position: absolute;
@@ -104,6 +107,7 @@
   color: #757575;
   }
   .modal-input {
+  
     width: 100%;
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
