--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -240,7 +240,8 @@
     }
     &__input {
       @media screen and (max-width: 768px) {
-     
+    
+        margin-bottom: 20px;
       }
       @media screen and (min-width: 768px) {
        
