--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -240,7 +240,7 @@
     }
     &__input {
       @media screen and (max-width: 768px) {
-    
+    width: 37
         margin-bottom: 20px;
       }
       @media screen and (min-width: 768px) {
