--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -297,7 +297,7 @@
     height: 100vh;
     z-index: 1;
     padding-top: 48px;
-    padding-bottom: 48px;
+   
     > .container {
       padding-left: 40px;
       
@@ -427,6 +427,10 @@
     position: relative;
     margin-bottom: 48px;
     gap: 10px;
+
+    max-width: 358px;
+ 
+ 
   }
   
   .mob-soc__item:not(:last-child) {
