--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,4 +1,5 @@
 .hero {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,7 +9,7 @@
   text-align: center;
   max-width: 100vw;
   height: auto;
-
+ 
   margin-right: auto;
   margin-left: auto;
   margin-top: 0;
@@ -23,7 +24,7 @@
       background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)), 
-      url(./img/hero/img_phone@1x.jpg);
+      url(../../img/hero/img_phone@1x.jpg);
      
       
       @media screen and (min-device-pixel-ratio: 2),
@@ -32,7 +33,7 @@
         background-image: linear-gradient(
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)), 
-          url(./img/hero/img_phone@2x.jpg);
+          url(../../img/hero/img_phone@2x.jpg);
       }
      
     // desktop screen 
@@ -44,14 +45,14 @@
     background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)), 
-      url(./img/hero/img_desktop@1x.jpg);
+      url(../../img/hero/img_desktop@1x.jpg);
       @media screen and (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
         background-image: linear-gradient(
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)), 
-          url(./img/hero/img_desktop@2x.jpg);
+          url(../../img/hero/img_desktop@2x.jpg);
   }
 
   }
@@ -78,21 +79,21 @@
 }
 
     .hero__title {
-        @media screen and (min-width: 480px) {
-          font-weight: 900;
-          font-size: 26px;
-          line-height: calc(42/26);
-          text-align: center;
-          letter-spacing: 0.06em;
-          text-transform: uppercase;
-          color: #FFFFFF;
-          width: 360px;
-          margin-bottom: 30px;
-          margin-left: auto;
-          margin-right: auto;
-          max-width: 360px;
-         
-        }
+     
+        font-weight: 900;
+        font-size: 26px;
+        line-height: calc(42/26);
+        text-align: center;
+        letter-spacing: 0.06em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        width: 360px;
+        margin-bottom: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 360px;
+      
+     
         @media screen and (min-width: 768px) {
           font-weight: 900;
           font-size: 26px;
@@ -105,7 +106,7 @@
           margin-bottom: 30px;
           margin-left: auto;
           margin-right: auto;
-          max-width: 360px;
+          min-width: 360px;
        
         }
         @media screen and (min-width: 1200px) {
@@ -126,7 +127,7 @@
         
     
       }
-
+    
      
 
       
