--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,11 +1,13 @@
 .modal-backdrop {
     position: fixed;
-    top: 0;
-    bottom: 0;
     left: 0;
-    right: 0;
+  
+    width: 100%;
+    height: 100%;
+  
     background-color: rgba(0, 0, 0, 0.8);
     transition: opacity 500ms, visibility 500ms;
+   
   }
   
   .modal-backdrop.is-hidden .modal {
@@ -13,17 +15,16 @@
   }
   
   .modal {
-    max-height: 90vh;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 450px;
     width: calc(100% - 30px);
-   max-width: 1600px;
-   width: 100%;
-   height: 609px;
   overflow: scroll;
   
      
-      position: absolute;
-      top: 50%;
-      left: 50%;
+    
       transform: translate(-50%, -50%) rotate(0);
       transition: transform 1000ms linear;
       background: #FFFFFF;
@@ -32,18 +33,11 @@
     
   
     
-    @media screen and (min-width: 1200px) {
-      width: 528px;
-      height: 581px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) rotate(0);
-      transition: transform 1000ms linear;
-      background: #FFFFFF;
-      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-      border-radius: 4px;
+   
+      @media screen and (min-width: 1200px) {
+        width: 528px;
     }
+    
   }
   
   
@@ -193,6 +187,9 @@
   }
   
   .checkbox-text {
+    @media screen and (min-width: 768px) {
+
+    }
 
     font-weight: 400;
     font-size: 12px;
