--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,9 +1,9 @@
 .team {
   @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-}
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
 
   
     background: var(--section-color--);
@@ -60,11 +60,12 @@
       margin-bottom: 30px;
      
       gap: 30px;
-
+     
       @media screen and (max-width: 768px) {
  
         flex-basis: calc((100% - 0px)/1);
-  
+        margin-bottom: 0;
+      
         display: flex;
         flex-direction: column;
         justify-content: center;
