--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -40,8 +40,8 @@ body {
     @media screen and(max-width:479px) {
         width: 100vw;
         margin: 0;
-        margin-left: auto;
-        margin-right: auto;
+        // margin-left: auto;
+        // margin-right: auto;
     }
 
     @media screen and (min-width:480px) {
