--- a/css/main.css
+++ b/css/main.css
@@ -1364,42 +1364,71 @@ address {
     margin-bottom: 20px;
   }
 }
-.footer__input {
-  width: 358px;
-  height: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
-  color: #FFFFFF;
-  background-color: rgb(47, 48, 58);
-  padding-left: 16px;
-  outline: none;
-}
 @media screen and (max-width: 768px) {
   .footer__input {
-    width: 450px;
     margin-bottom: 20px;
+    width: 100%;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    background-color: rgb(47, 48, 58);
+    padding-left: 16px;
+    outline: none;
+  }
+  .footer__input:hover, .footer__input:focus {
+    border: 1px solid var(--accent-color);
   }
 }
 @media screen and (min-width: 768px) {
   .footer__input {
-    width: 450px;
     margin-bottom: 20px;
+    width: 450px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    background-color: rgb(47, 48, 58);
+    padding-left: 16px;
+    outline: none;
+  }
+  .footer__input:hover, .footer__input:focus {
+    border: 1px solid var(--accent-color);
   }
 }
 @media screen and (min-width: 1200px) {
   .footer__input {
+    margin: 0;
     width: 358px;
-    margin: 0 auto;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    background-color: rgb(47, 48, 58);
+    padding-left: 16px;
+    outline: none;
   }
-}
-.footer__input:hover, .footer__input:focus {
-  border: 1px solid var(--accent-color);
+  .footer__input:hover, .footer__input:focus {
+    border: 1px solid var(--accent-color);
+  }
 }
 .footer__btn {
   font-family: inherit;
@@ -1433,7 +1462,6 @@ address {
 }
 .footer__form {
   width: 100%;
-  max-width: 358px;
 }
 @media screen and (max-width: 768px) {
   .footer__form {
