--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -24,7 +24,7 @@
       background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)), 
-      url(../../img/hero/img_phone@1x.jpg);
+      url(../img/hero/img_phone@1x.jpg);
      
       
       @media screen and (min-device-pixel-ratio: 2),
@@ -33,7 +33,7 @@
         background-image: linear-gradient(
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)), 
-          url(../../img/hero/img_phone@2x.jpg);
+          url(../img/hero/img_phone@2x.jpg);
       }
      
     // desktop screen 
@@ -45,14 +45,14 @@
     background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)), 
-      url(../../img/hero/img_desktop@1x.jpg);
+      url(../img/hero/img_desktop@1x.jpg);
       @media screen and (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
         background-image: linear-gradient(
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)), 
-          url(../../img/hero/img_desktop@2x.jpg);
+          url(../img/hero/img_desktop@2x.jpg);
   }
 
   }
