--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -33,7 +33,7 @@
         background-image: linear-gradient(
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)), 
-          url(../img/hero/img_phone@2x.jpg);
+          url(..//img/hero/img_phone@2x.jpg);
       }
      
     // desktop screen 
