--- a/css/main.css
+++ b/css/main.css
@@ -50,25 +50,36 @@ address {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-}
-@media screen and (max-width: 479px) {
-  .container {
-    width: 100vw;
-    margin: 0;
-  }
+  width: 100%;
 }
 @media screen and (min-width: 480px) {
   .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: auto;
     width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
   .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
   .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 1200px;
   }
 }
@@ -806,12 +817,22 @@ address {
   }
 }
 .team__title {
-  font-size: 36px;
-  line-height: 1.1666666667;
+  font-size: 28px;
+  line-height: 1.1785714286;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-color);
   margin-bottom: 50px;
+}
+@media screen and (min-width: 1200px) {
+  .team__title {
+    font-size: 36px;
+    line-height: 1.1666666667;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-color);
+    margin-bottom: 50px;
+  }
 }
 
 .card {
