--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -12,12 +12,25 @@
   
    
     &__title {
+      
+      font-size: 28px;
+      line-height: calc(33/28);
+      text-align: center;
+      letter-spacing: 0.03em;
+      color: var(--main-color);
+      margin-bottom: 50px;
+      
+     
+     
+
+      @media screen and (min-width: 1200px) {
         font-size: 36px;
         line-height: calc(42/36);
         text-align: center;
         letter-spacing: 0.03em;
         color: var(--main-color);
         margin-bottom: 50px;
+      }
     }
     
     
