--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -36,19 +36,20 @@ body {
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
+    width: 100%;
 
-    @media screen and(max-width:479px) {
-        width: 100vw;
-        margin: 0;
-        // margin-left: auto;
-        // margin-right: auto;
-    }
-
-    @media screen and (min-width:480px) {
+    @media screen and (min-width: 480px) {
+      display: flex;
+        margin-left: auto;
         width: 480px;
+      
     }
+
+ 
 
     @media screen and (min-width:768px) {
+      display: flex;
+      align-items: center;
         width: 768px;
        
 
@@ -56,6 +57,8 @@ body {
     }
 
     @media screen and (min-width:1200px) {
+      display: flex;
+      align-items: center;
         width: 1200px;
 
     }
