--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,5 +1,4 @@
 .hero {
-  
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,7 +23,7 @@
       background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)), 
-      url(../img/hero/img_phone@1x.jpg);
+      url(../../img/hero/img_phone@1x.jpg);
      
       
       @media screen and (min-device-pixel-ratio: 2),
@@ -33,7 +32,7 @@
         background-image: linear-gradient(
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)), 
-          url(..//img/hero/img_phone@2x.jpg);
+          url(../../img/hero/img_phone@2x.jpg);
       }
      
     // desktop screen 
@@ -45,14 +44,14 @@
     background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)), 
-      url(../img/hero/img_desktop@1x.jpg);
+      url(../../img/hero/img_desktop@1x.jpg);
       @media screen and (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
         background-image: linear-gradient(
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)), 
-          url(../img/hero/img_desktop@2x.jpg);
+          url(../../img/hero/img_desktop@2x.jpg);
   }
 
   }
