--- a/css/main.css
+++ b/css/main.css
@@ -50,11 +50,17 @@ address {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-  width: 100%;
+}
+@media screen and (max-width: 479px) {
+  .container {
+    width: 100vw;
+    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 @media screen and (min-width: 480px) {
   .container {
-    margin-left: auto;
     width: 480px;
   }
 }
@@ -172,10 +178,15 @@ address {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-left: 92px;
+    margin-left: 88px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__list {
+    margin-left: 93px;
   }
 }
 .header__link {
@@ -497,11 +508,8 @@ address {
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
-  padding-top: 118px;
-  padding-bottom: 118px;
-  text-align: center;
-  max-width: 100vw;
-  height: auto;
+  max-width: 1600px;
+  height: 400px;
   margin-right: auto;
   margin-left: auto;
   margin-top: 0;
@@ -523,9 +531,9 @@ address {
 }
 @media screen and (min-width: 1200px) {
   .hero {
+    height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
-    max-width: 1600px;
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../img/hero/img_desktop@1x.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../img/hero/img_desktop@1x.jpg);
   }
@@ -652,27 +660,24 @@ address {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: 30px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
 @media screen and (max-width: 768px) {
   .next__item {
-    -ms-flex-preferred-size: calc((100% - 30px) / 1);
-        flex-basis: calc((100% - 30px) / 1);
+    width: 450px;
   }
 }
 @media screen and (min-width: 768px) {
   .next__item {
-    -ms-flex-preferred-size: calc((100% - 60px) / 2);
-        flex-basis: calc((100% - 60px) / 2);
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+    width: 354px;
   }
 }
 @media screen and (min-width: 1200px) {
   .next__item {
-    -ms-flex-preferred-size: calc((100% - 150px) / 4);
-        flex-basis: calc((100% - 150px) / 4);
+    -ms-flex-preferred-size: calc((100% - 90px) / 4);
+        flex-basis: calc((100% - 90px) / 4);
   }
 }
 
@@ -687,16 +692,6 @@ address {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-}
-@media screen and (max-width: 768px) {
-  .next__subtitle {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
 }
 
 .next__text {
@@ -717,6 +712,8 @@ address {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  max-width: 450px;
+  width: 100%;
   height: 120px;
   background-color: #F5F4FA;
   margin-bottom: 30px;
