--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,4 +1,5 @@
 .header {
+
   .header__conteiner {
     display: flex;
     justify-content: space-between;
@@ -46,9 +47,12 @@
 
 @media screen and (min-width: 768px) {
   display: flex;
-  margin-left: 92px;
+  margin-left: 88px;
   align-items: center;
     
+  }
+  @media screen and (min-width: 1200px) {
+margin-left: 93px;
   }
         
     }
