--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -3,12 +3,20 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding-top: 118px;
-  padding-bottom: 118px;
-  text-align: center;
-  max-width: 100vw;
-  height: auto;
+  // padding-top: 118px;
+  // padding-bottom: 118px;
+  // text-align: center;
+  // max-width: 100vw;
+  // height: auto;
  
+  // margin-right: auto;
+  // margin-left: auto;
+  // margin-top: 0;
+  // margin-bottom: 0;
+  // padding-top: 118px;
+  // padding-bottom: 118px;
+  max-width: 1600px;
+  height: 400px;
   margin-right: auto;
   margin-left: auto;
   margin-top: 0;
@@ -37,9 +45,10 @@
      
     // desktop screen 
     @media screen and (min-width: 1200px) {
+     height: 600px;
       padding-top: 200px;
       padding-bottom: 200px;
-      max-width: 1600px;
+      
 
     background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
