--- a/sass/layout/_next.scss
+++ b/sass/layout/_next.scss
@@ -19,38 +19,41 @@
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 30px;
-    justify-content: center;
-}
+  
+  }
     
   
 .next__item {
-    
+    // width: 270px;
     @media screen and (max-width: 768px) {
  
-      flex-basis: calc((100% - 30px)/1);
-    
+      
+    width: 450px;
       
     }
     @media screen and (min-width: 768px) {
      
-      flex-basis: calc((100% - 60px)/2);
-     
+   
+    flex-basis: calc((100% - 30px) / 2);
+   width: 354px;
+  }
       
-    }
+    
     @media screen and (min-width: 1200px) {
      
-      flex-basis: calc((100% - 150px)/4);
-     
+      flex-basis: calc((100% - 90px) / 4);
+ 
+    
       
     }
       
-      
+  }
         
        
       
-      }
+      
     
-  
+
   .next__subtitle {
     font-weight: 700;
     font-size: 14px;
@@ -60,10 +63,7 @@
     color: var(--main-color);
     margin-bottom: 10px;
     align-items: flex-start;
-    @media screen and (max-width: 768px) {
-      display: flex;
-      justify-content: center;
-    }
+    
     
   }
   .next__text {
@@ -78,7 +78,8 @@
     justify-items: center;
     align-items: center;
     justify-content: center;
-   
+    max-width: 450px;
+    width: 100%;
     height: 120px;
     background-color: #F5F4FA;
     margin-bottom: 30px;
