--- a/css/main.css
+++ b/css/main.css
@@ -662,8 +662,13 @@ address {
   gap: 30px;
 }
 
-.next__item {
-  width: 450px;
+@media screen and (max-width: 768px) {
+  .next__item {
+    width: 450px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 @media screen and (min-width: 768px) {
   .next__item {
