--- a/sass/layout/_next.scss
+++ b/sass/layout/_next.scss
@@ -25,10 +25,12 @@
   
 .next__item {
     // width: 270px;
-    
+    @media screen and (max-width: 768px) {
  
       
     width: 450px;
+    align-items: center;
+    }
       
     
     @media screen and (min-width: 768px) {
