--- a/css/main.css
+++ b/css/main.css
@@ -664,6 +664,8 @@ address {
 
 @media screen and (max-width: 768px) {
   .next__item {
+    -ms-flex-preferred-size: calc((100% - 30px) / 1);
+        flex-basis: calc((100% - 30px) / 1);
     width: 450px;
     -webkit-box-align: center;
         -ms-flex-align: center;
