--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -16,6 +16,7 @@
   // padding-top: 118px;
   // padding-bottom: 118px;
   max-width: 1600px;
+  width: 100%;
   height: 400px;
   margin-right: auto;
   margin-left: auto;
