--- a/sass/layout/_next.scss
+++ b/sass/layout/_next.scss
@@ -13,22 +13,29 @@
   }
 }
 .next__list {
+  
+
     display: flex;
     margin-left: auto;
     margin-right: auto;
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 30px;
-  
   }
+    
+  
+  
     
   
 .next__item {
     // width: 270px;
     @media screen and (max-width: 768px) {
- 
-      flex-basis: calc((100% - 30px) / 1);
-    width: 450px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+      
+    max-width: 450px;
+    width: 100%;
     align-items: center;
     }
       
@@ -57,6 +64,7 @@
     
 
   .next__subtitle {
+
     font-weight: 700;
     font-size: 14px;
     line-height: calc(16/14);
@@ -65,7 +73,9 @@
     color: var(--main-color);
     margin-bottom: 10px;
     align-items: flex-start;
-    
+      @media screen and (min-width: 768px) {
+        align-items: flex-start;
+      }
     
   }
   .next__text {
