--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -82,8 +82,9 @@ overflow: scroll;
   pointer-events: none;
 }
 .modal__title {
-  margin-left: 40px;
-  width: 370px;
+  margin: auto;
+  max-width: 370px;
+  width: 100%;
   
   font-weight: 700;
   font-size: 20px;
@@ -94,7 +95,7 @@ overflow: scroll;
   padding-top: 40px;
   margin-bottom: 12px;
   @media screen and (min-width: 1200px){
-    width: 448px;
+    max-width: 448px;
   }
 }
 
