--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -83,6 +83,9 @@ overflow: scroll;
 }
 .modal__title {
   margin: auto;
+  margin-top: auto;
+  margin-right: auto;
+  margin-left: auto;
   max-width: 370px;
   width: 100%;
   
