--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,4 +1,5 @@
 .header {
+ 
 
   .header__conteiner {
     display: flex;
@@ -58,12 +59,10 @@ margin-left: 93px;
     }
     &__link {
       @media screen and (max-width: 768px) {
-        font-size: 12px;
-        line-height: calc(14/12);
+      
       }
       @media screen and (min-width: 768px) {
-        font-size: 12px;
-        line-height: calc(14/12);
+      
       }
   
         font-weight: 500;
@@ -73,6 +72,7 @@ margin-left: 93px;
     color: var(--main-color);
     display: block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
     
   
     padding-top: 32px;
@@ -402,9 +402,7 @@ margin-left: 93px;
     }
    
   }
-  .mob-menu__button {
-    margin-top: 306px;
-  }
+
 
   .mob-current {
     color: var(--accent-color);
@@ -418,6 +416,7 @@ margin-left: 93px;
     margin-bottom: 64px;
     list-style: none;
     width: 100%;
+ 
   }
   
   .mob-menu-mail {
@@ -427,6 +426,8 @@ margin-left: 93px;
     letter-spacing: 0.02em;
     color: #757575;
     margin-top: auto;
+    width: 100%;
+   
   }
   
   .mob-menu-tel {
@@ -438,6 +439,7 @@ margin-left: 93px;
     margin-top: auto;
   }
   
+
   .mob-soc {
     display: flex;
     position: relative;
@@ -445,6 +447,8 @@ margin-left: 93px;
     gap: 10px;
     width: 100%;
     margin-top: auto;
+    display: flex;
+    flex-wrap: wrap;
    
  
  
@@ -454,6 +458,7 @@ margin-left: 93px;
     border-right: 1px solid rgba(33, 33, 33, 0.2);
     padding-right: 10px;
   }
+
   
   .mob-soc__link {
     font-weight: 500;
