--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -57,7 +57,7 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
-            padding: 30px 10px 30px 10px;
+            padding:  10px 30px;
       text-align: center;
     
         }
@@ -70,7 +70,7 @@
        
     &__item {
       width: 100%;
-      margin-bottom: 30px;
+     
      
       gap: 30px;
      
@@ -123,6 +123,7 @@
         
       }
       &__text {
+        font-weight: 400;
         font-size: 16px;
         line-height: calc(19/16);
         letter-spacing: 0.03em;
@@ -134,6 +135,7 @@
       display: flex;
       justify-content: center;
       margin-top: 16px;
+      margin-bottom: 30px;
       
       
       &__item {
