--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -377,18 +377,23 @@
       // flex-wrap: wrap;
       // justify-content: space-around;
     }
+    
     @media screen and (min-width: 768px) {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
+      align-items: baseline;
     }
     @media screen and (min-width: 1200px) {
     display: flex;
     flex-wrap: nowrap;
     align-items: baseline;
-   
     }
   }
+
+   
+    
+  // }
 
   
  
